the buttons look SO much better but now the green and red flashes look enormous and out of place not sure how to fix that yet

--- a/simon.css
+++ b/simon.css
@@ -2,7 +2,7 @@
   font-family: "Homemade Apple", cursive;
   font-family: "Rubik Doodle Shadow", system-ui;
   font-weight: bold;
-  margin: 0;
+  margin: -50;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -10,28 +10,41 @@
 }
 
 #pageContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: start;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-gap: 1em;
 }
 
 #btnContainer {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  max-width: 500px;
-  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-gap: 1em;
+  grid-column: 2 / 4;
+  grid-row: 1 / 3;
+}
+
+#coolBtn {
+    grid-column: 3 / 4;
+  grid-row: 1 / 2;
+}
+#dogBtn {
+    grid-column: 4 / 5 ;
+  grid-row: 1 / 2;
+}
+#gumBtn {
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
+}
+#boneBtn {
+  grid-column: 4 / 5;
+  grid-row: 2 / 3;
 }
 
 #startHintRestartContainer {
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-right: -100px;
-  display: flex;
-  flex-direction: row;
+  grid-column: 4 / 5;
+  grid-row: -3 / -2;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-size: 2rem;
   padding: 15px 15px 15px 15px;
